# linear-optimization-demo

./: .gitignore  CMakeLists.txt  LICENSE  LinearOptimization.pro  LinearOptimization.pro.bak  README  README.md  main.cxx  mainwindow.cxx  mainwindow.hxx  mainwindow.ui  numericvalidator.cxx  numericvalidator.hxx  numericvalidatordelegate.cxx  numericvalidatordelegate.hxx  tablewidgetutils.cxx  tablewidgetutils.hxx  tablewidgetutils.txx
forms/: mainwindow.ui
lib/boost/: VERSION.txt  bcp-report.html  bcp_report.html  boost_bcp_report.html  rational.hpp
lib/cppformat/: VERSION.txt
lib/cxx-prettyprint/: VERSION.txt
lib/prettyprint/: VERSION.txt
misc/: CodeStyle.xml
misc/Cloc/: cloc.txt  cloc_definitions.txt
misc/Colormaps/: Colormap_BlPi_10_1.11_Hex.txt  Colormap_Default_20_1.0_Hex.txt  Colormap_Default_20_1.1_Hex.txt  Colormap_PiCy_10_1.11_Hex.txt  Colormap_PuCy_10_1.0_Hex.txt  Colormap_PuCy_10_1.11_Hex.txt  Colormap_PuGrYe_10_1.11_Hex.txt  Colormap_PuGrYe_20_1.11_Hex.txt  Colormap_PuGrYe_20_1.11_v2_Hex.txt  Colormap_PгRe_10_1.11_Hex.txt  QtColormapGenerator.py  colormap_BlGrYe_11_Hex.txt  colormap_BlGrYe_11_RGB.txt  colormap_ReCy_11_Hex.txt  colormap_ReCy_11_RGB.txt  colormap_viridis_like_20_hex.txt  colormap_viridis_like_2_20_hex.txt  colormap_viridis_like_3_20_hex.txt
misc/LocMetrics/: LocMetrics.html  LocMetricsCommentWords.csv  LocMetricsFiles.csv  LocMetricsFolders.csv  LocMetricsFunctions.csv  LocMetricsFunctions.html
misc/Tests/: Ex2_07.10_1@13Dec15_1-5-44.json  Ex3_07.10_1@13Dec15_1-4-23.json  Ex4_07.10_1@11Dec15_21-0-54.json  Ex5_07.10_1@11Dec15_20-55-28.json  Ex6_07.10_1@11Dec15_20-54-20.json  Ex_07.10_1.json  Ex_07.10_1@11Dec15_20-53-23.json  Ex_07.10_1@15Dec15_18-6-12.json  Ex_07.10_2@23Dec15_2-22-36.json  Ex_16.09_2.json  Ex_21.10_1.json  Ex_21.10_1@23Dec15_2-26-12.json  Ex_21.10_2@23Dec15_2-27-26.json  Infeasible_2x4@7Dec15_17-13-44.json  Infeasible_2x4@7Dec15_17-21-25.json  Infeasible_3x5@7Dec15_17-29-41.json  Infeasible_4x6@16Dec15_18-25-53.json  (+22 more)
res/: AUTHORS.txt  COPYING.txt  COPYING_CCBYSA3.txt  resources.qrc  resources.qrc.bak
src/: config.hxx  dantzignumericsolver.cxx  dantzignumericsolver.hxx  dataconvertors.cxx  dataconvertors.hxx  globaldefinitions.hxx  ijsonserializable.cxx  ijsonserializable.hxx  inumericsolver.cxx  linearfunction.cxx  linearfunction.hxx  linearprogramdata.cxx  linearprogramdata.hxx  linearprogramdataserializable.cxx  linearprogramdataserializable.hxx  main.cxx  main.hxx  mainwindow.cxx  mainwindow.hxx  numericvalidatingdelegate.cxx  numericvalidatingdelegate.hxx  numericvalidatingdelegate.txx  numericvalidator.cxx  numericvalidator.hxx  numericvalidatordelegate.cxx  numericvalidatordelegate.hxx  problemdataserializable.cxx  problemdataserializable.hxx  tablewidgetserializable.cxx  tablewidgetserializable.hxx  tablewidgetutils.cxx  tablewidgetutils.hxx  tablewidgetutils.txx  utils.cxx  utils.hxx
ui/: mainwindow.ui
(+118 files in other folders)
